src/objects/Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>評価</relationshipLabel>
        <relationshipName>Evaluation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>月</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>結果</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>目標</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>年</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>評価</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Result__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>